--- a/app/src/main/res/layout/dialog_dispose.xml
+++ b/app/src/main/res/layout/dialog_dispose.xml
@@ -2,84 +2,95 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="400dp"
+    android:layout_height="350dp">
 
     <!--Todo 廃棄日"etDateDisposed06"は当日の日付を自動入力-->
     <!--Todo "廃棄する"buttonタップで廃棄日・廃棄理由・更新者をdisposedSheetの当該レコードへ追加-->
 
     <TextView
         android:id="@+id/tvDateDisposed06"
-        android:layout_width="60dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="38dp"
         android:layout_marginTop="30dp"
         android:text="@string/tv_date_disposed06"
-        android:textSize="80dp"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/etDateDisposed06"
-        android:layout_width="160dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="30dp"
-        android:textSize="80dp"
+        android:layout_width="147dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="24dp"
+        android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/tvDateDisposed06"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/tvReason06"
-        android:layout_width="80dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="38dp"
         android:layout_marginTop="30dp"
         android:text="@string/tv_reason06"
-        android:textSize="80dp"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDateDisposed06" />
 
     <EditText
         android:id="@+id/etReason06"
-        android:layout_width="220dp"
-        android:layout_height="67dp"
+        android:layout_width="311dp"
+        android:layout_height="77dp"
         android:layout_marginStart="38dp"
         android:inputType="textMultiLine"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvReason06"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/tvStaff06"
-        android:layout_width="60dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="38dp"
         android:layout_marginTop="30dp"
         android:text="@string/tv_staff06"
-        android:textSize="80dp"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etReason06" />
 
-    <Spinner
+    <EditText
         android:id="@+id/etStaff06"
-        android:layout_width="133dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="138dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="20dp"
+        android:textSize="18dp"
         app:layout_constraintStart_toEndOf="@+id/tvStaff06"
         app:layout_constraintTop_toBottomOf="@+id/etReason06"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/btDispose06"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="98dp"
+        android:layout_width="120dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="148dp"
         android:layout_marginTop="32dp"
         android:text="@string/bt_dispose06"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvStaff06"
         tools:ignore="TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/btDatepicker06"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintStart_toEndOf="@+id/etDateDisposed06"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
