--- a/app/src/main/res/layout/fragment_current_list.xml
+++ b/app/src/main/res/layout/fragment_current_list.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+        <Spinner
+            android:id="@+id/sptype07"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"/>
+
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/lvCurrent"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--Todo 3-->
-    <!--Todo activity_categoryのbuttonをタップしたときにintentした文字列で-->
-    <!--Todo Table"currentSheet"をフィールド"type"でselectし内容を表示-->
-
 </ListView>
+</LinearLayout>
