--- a/app/src/main/res/layout/fragment_disposed_list.xml
+++ b/app/src/main/res/layout/fragment_disposed_list.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+        <Spinner
+            android:id="@+id/sptype08"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"/>
+
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/lvDisposed"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
 </ListView>
-
-    <!--Todo 5-->
-    <!--Todo Table"disposedSheet"の全内容を表示-->
-
-    <!--Todo そのうち"type"でselectできるように変更する-->
+</LinearLayout>
