--- a/app/src/main/res/layout/fragment_current_device_info.xml
+++ b/app/src/main/res/layout/fragment_current_device_info.xml
@@ -81,97 +81,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etname03" />
 
-    <Button
-        android:id="@+id/btupdate03"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="336dp"
-        android:text="@string/bt_update03"
-        android:textSize="22dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etname03" />
-
-    <TextureView
-        android:id="@+id/ttv_pics03_2"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="228dp"
-        app:layout_constraintStart_toEndOf="@+id/ttv_pics03_1"
-        app:layout_constraintTop_toBottomOf="@+id/etname03" />
-
-    <Button
-        android:id="@+id/btdispose03"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="336dp"
-        android:text="@string/bt_dispose03"
-        android:textSize="22dp"
-        app:layout_constraintStart_toEndOf="@+id/btupdate03"
-        app:layout_constraintTop_toBottomOf="@+id/etname03" />
-
-    <Button
-        android:id="@+id/btaddpics03"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="264dp"
-        android:text="@string/bt_add_pics03"
-        android:textSize="18dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etname03" />
-
-    <TextureView
-        android:id="@+id/ttv_pics03_4"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="228dp"
-        app:layout_constraintStart_toEndOf="@+id/ttv_pics03_3"
-        app:layout_constraintTop_toBottomOf="@+id/etname03" />
-
-    <TextureView
-        android:id="@+id/ttv_pics03_3"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="228dp"
-        app:layout_constraintStart_toEndOf="@+id/ttv_pics03_2"
-        app:layout_constraintTop_toBottomOf="@+id/etname03" />
-
-    <TextView
-        android:id="@+id/tvpics03"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="232dp"
-        android:text="@string/tv_pics04"
-        android:textSize="18dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etname03" />
-
-    <TextureView
-        android:id="@+id/ttv_pics03_1"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="228dp"
-        app:layout_constraintStart_toEndOf="@+id/tvpics03"
-        app:layout_constraintTop_toBottomOf="@+id/etname03" />
-
-    <TextView
-        android:id="@+id/tvreview03"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="120dp"
-        android:text="@string/tv_review04"
-        android:textSize="18dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etname03" />
-
     <TextView
         android:id="@+id/tvdateopened03"
         android:layout_width="wrap_content"
@@ -196,15 +105,106 @@
 
     <EditText
         android:id="@+id/etreview03"
-        android:layout_width="500dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="148dp"
+        android:layout_width="557dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="124dp"
         android:inputType="textMultiLine"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etname03"
         tools:ignore="SpeakableTextPresentCheck" />
+
+    <ImageView
+        android:id="@+id/iv403"
+        android:layout_width="96dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="172dp"
+        app:layout_constraintStart_toEndOf="@+id/iv303"
+        app:layout_constraintTop_toBottomOf="@+id/etname03" />
+
+    <ImageView
+        android:id="@+id/iv103"
+        android:layout_width="95dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="172dp"
+        app:layout_constraintStart_toEndOf="@+id/tvpics03"
+        app:layout_constraintTop_toBottomOf="@+id/etname03" />
+
+    <ImageView
+        android:id="@+id/iv303"
+        android:layout_width="96dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="172dp"
+        app:layout_constraintStart_toEndOf="@+id/iv203"
+        app:layout_constraintTop_toBottomOf="@+id/etname03" />
+
+    <ImageView
+        android:id="@+id/iv203"
+        android:layout_width="95dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="172dp"
+        app:layout_constraintStart_toEndOf="@+id/iv103"
+        app:layout_constraintTop_toBottomOf="@+id/etname03" />
+
+    <Button
+        android:id="@+id/btaddpics03"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="196dp"
+        android:text="@string/bt_add_pics03"
+        android:textSize="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etname03" />
+
+    <TextView
+        android:id="@+id/tvpics03"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="172dp"
+        android:text="@string/tv_pics04"
+        android:textSize="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etname03" />
+
+    <Button
+        android:id="@+id/btdispose03"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="272dp"
+        android:text="@string/bt_dispose03"
+        android:textSize="22dp"
+        app:layout_constraintStart_toEndOf="@+id/btupdate03"
+        app:layout_constraintTop_toBottomOf="@+id/etname03" />
+
+    <Button
+        android:id="@+id/btupdate03"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="272dp"
+        android:text="@string/bt_update03"
+        android:textSize="22dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etname03" />
+
+    <TextView
+        android:id="@+id/tvreview03"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="100dp"
+        android:text="@string/tv_review04"
+        android:textSize="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etname03" />
 
     <TextView
         android:id="@+id/tvtype03"
